--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.560.0"
+		"@lucide/svelte": "^0.560.0",
+		"@vercel/analytics": "^1.6.1"
 	}
 }
