--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -52,6 +52,7 @@
 		"@types/react": "^19.2.7",
 		"effect": "^3.19.8",
 		"react": "^19.2.3",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"@morphllm/morphsdk": "^0.2.71"
 	}
 }
