starting to add ci

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -28,11 +28,9 @@
 		"access": "public"
 	},
 	"scripts": {
-		"build": "bun run scripts/build.ts",
+		"build:js": "bun run scripts/build.ts",
 		"build:targets": "bun run scripts/build-binaries.ts",
-		"setup:platforms": "bun install --cpu=x64 --os=darwin && bun install --cpu=x64 --os=linux && bun install --cpu=arm64 --os=linux && bun install --cpu=x64 --os=win32",
-		"build:artifacts": "bun run setup:platforms && bun run build && bun run build:targets",
-		"prepublishOnly": "bun run build:artifacts",
+		"build": "bun run build:js && bun run build:targets",
 		"check": "tsgo --noEmit",
 		"prepare": "effect-language-service patch"
 	},
