--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
 	},
 	"packageManager": "bun@1.3.5",
 	"scripts": {
-		"clean": "rm -rf node_modules && rm -rf apps/web/node_modules && rm -rf apps/cli/node_modules && rm -rf packages/core/node_modules",
+		"clean": "find . -type d \\( -name node_modules -o -name .svelte-kit -o -name .turbo -o -name .vercel \\) -prune -exec rm -rf {} +",
 		"dev": "turbo run dev",
 		"cli": "bun run apps/cli/src/index.ts",
-		"cli:ask": "bun run apps/cli/src/index.ts ask",
-		"cli:serve": "bun run apps/cli/src/index.ts serve",
-		"cli:open": "bun run apps/cli/src/index.ts open",
-		"build": "turbo run build",
+		"build:cli": "turbo run build --filter=btca",
+		"build:web": "turbo run build --filter=@btca/web",
+		"build:all": "turbo run build",
 		"check": "turbo run check"
 	},
 	"devDependencies": {
