--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "@btca/cli",
+	"name": "btca",
 	"author": "Ben Davis",
 	"version": "1.0.0",
+	"homepage": "https://btca.dev",
 	"description": "CLI tool for asking questions about technologies using btca server",
 	"type": "module",
 	"license": "MIT",
