--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"packageManager": "bun@1.3.5",
 	"scripts": {
 		"web": "turbo dev --filter=@btca/web",
+		"chat-web": "turbo dev --filter=@btca/chat-web",
 		"cli": "bun run apps/cli/src/index.ts",
 		"server": "bun --watch apps/server/src/index.ts",
 		"sandbox": "bun run apps/sandbox/src/index.ts",
@@ -31,10 +32,12 @@
 		"build:all": "turbo build",
 		"build:cli": "turbo build --filter=btca",
 		"build:web": "turbo build --filter=@btca/web",
+		"build:chat-web": "turbo build --filter=@btca/chat-web",
 		"check:all": "turbo check",
 		"check:cli": "turbo check --filter=btca",
 		"check:cli-legacy": "turbo check --filter=btca",
 		"check:web": "turbo check --filter=@btca/web",
+		"check:chat-web": "turbo check --filter=@btca/chat-web",
 		"check:shared": "turbo check --filter=@btca/shared",
 		"check:server": "turbo check --filter=btca-server",
 		"check:sandbox": "turbo check --filter=btca-sandbox",
@@ -42,6 +45,7 @@
 		"format:cli": "turbo format --filter=btca",
 		"format:cli-legacy": "turbo format --filter=btca",
 		"format:web": "turbo format --filter=@btca/web",
+		"format:chat-web": "turbo format --filter=@btca/chat-web",
 		"format:shared": "turbo format --filter=@btca/shared",
 		"format:server": "turbo format --filter=btca-server",
 		"format:sandbox": "turbo format --filter=btca-sandbox",
