--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -39,6 +39,7 @@
 		"build": "bun run scripts/build-binaries.ts"
 	},
 	"devDependencies": {
+		"@btca/shared": "workspace:*",
 		"btca-server": "workspace:*",
 		"@opentui/core": "^0.1.65",
 		"@opentui/solid": "^0.1.65",
