--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -41,8 +41,8 @@
 	"devDependencies": {
 		"@btca/shared": "workspace:*",
 		"btca-server": "workspace:*",
-		"@opentui/core": "^0.1.65",
-		"@opentui/solid": "^0.1.65",
+		"@opentui/core": "0.1.65",
+		"@opentui/solid": "0.1.65",
 		"@shikijs/langs": "^3.20.0",
 		"@shikijs/themes": "^3.20.0",
 		"@types/bun": "latest",
