--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"clean": "find . -type d \\( -name node_modules -o -name .svelte-kit -o -name .turbo -o -name .vercel \\) -prune -exec rm -rf {} +"
 	},
 	"devDependencies": {
-		"@opentui/solid": "^0.1.72",
+	"@opentui/solid": "0.1.65",
 		"@types/bun": "^1.3.6",
 		"@typescript/native-preview": "^7.0.0-dev.20260114.1",
 		"turbo": "^2.7.4",
