--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,57 @@ permissions:
   packages: write
 
 jobs:
+  build-cli-x64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: '1.3.7'
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Build CLI binaries (x64 runners)
+        run: bun run build:cli
+        env:
+          BTCA_TARGETS: bun-darwin-arm64,bun-darwin-x64,bun-linux-x64,bun-windows-x64
+
+      - name: Upload CLI binaries (x64)
+        uses: actions/upload-artifact@v4
+        with:
+          name: cli-dist-x64
+          path: apps/cli/dist/*
+
+  build-cli-arm64:
+    runs-on: ubuntu-24.04-arm64
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: '1.3.7'
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Build CLI binaries (arm64 runner)
+        run: bun run build:cli
+        env:
+          BTCA_TARGETS: bun-linux-arm64
+
+      - name: Upload CLI binaries (arm64)
+        uses: actions/upload-artifact@v4
+        with:
+          name: cli-dist-arm64
+          path: apps/cli/dist/*
+
   publish-btca:
     runs-on: ubuntu-latest
+    needs: [build-cli-x64, build-cli-arm64]
     steps:
       - uses: actions/checkout@v4
 
@@ -28,8 +77,24 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Build JS bundle & artifacts
-        run: bun run build:cli
+      - name: Prepare dist directory
+        run: mkdir -p apps/cli/dist
+
+      - name: Download CLI binaries (x64)
+        uses: actions/download-artifact@v4
+        with:
+          name: cli-dist-x64
+          path: apps/cli/dist
+
+      - name: Download CLI binaries (arm64)
+        uses: actions/download-artifact@v4
+        with:
+          name: cli-dist-arm64
+          path: apps/cli/dist
+
+      - name: Verify dist artifacts
+        run: bun run scripts/verify-dist.ts
+        working-directory: apps/cli
 
       - name: Get version from package.json
         id: version
