polishing and v, need to do MCP tmrw

--- a/btca.config.jsonc
+++ b/btca.config.jsonc
@@ -125,8 +125,14 @@
       "url": "https://github.com/daytonaio/sdk",
       "branch": "main",
       "specialNotes": "Daytona TypeScript SDK. Use for sandbox creation, management, and API reference."
+    },
+    {
+      "type": "git",
+      "name": "convex",
+      "url": "https://github.com/get-convex/convex-js",
+      "branch": "main"
     }
   ],
-  "model": "claude-haiku-4-5",
-  "provider": "opencode"
+  "model": "minimax/minimax-m2.1",
+  "provider": "openrouter"
 }
