--- a/apps/remotion/package.json
+++ b/apps/remotion/package.json
@@ -4,17 +4,18 @@
 	"type": "module",
 	"scripts": {
 		"check": "tsgo --noEmit",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"preview": "remotion studio --entry=src/index.ts"
 	},
 	"dependencies": {
-		"@remotion/media": "^4.0.416",
-		"@remotion/transitions": "^4.0.416",
+		"@remotion/media": "4.0.417",
+		"@remotion/transitions": "4.0.417",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"remotion": "^4.0.416"
+		"remotion": "4.0.417"
 	},
 	"devDependencies": {
-		"@remotion/cli": "4.0.416",
+		"@remotion/cli": "4.0.417",
 		"@types/react": "18.2.79",
 		"@types/react-dom": "18.2.25"
 	}
