--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"packageManager": "bun@1.3.8",
 	"scripts": {
 		"dev:web": "turbo dev --filter=@btca/web",
+		"dev:docs": "bun run --cwd apps/docs dev",
 		"dev:cli": "bun run --watch apps/cli/src/index.ts",
 		"cli": "bun run apps/cli/src/index.ts",
 		"server": "bun --watch apps/server/src/index.ts",
