--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,6 +8,10 @@ on:
       - 'packages/**'
       - 'package.json'
       - 'bun.lock'
+      - 'bunfig.toml'
+      - 'tsconfig.json'
+      - '.prettierrc'
+      - '.editorconfig'
       - 'turbo.json'
 
 concurrency:
@@ -16,14 +20,19 @@ concurrency:
 
 jobs:
   build:
-    runs-on: depot-ubuntu-24.04-arm-4
+    strategy:
+      matrix:
+        runner:
+          - depot-ubuntu-24.04
+          - depot-ubuntu-24.04-arm
+    runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3.5'
+          bun-version: '1.3.7'
 
       - name: Cache dependencies
         uses: actions/cache@v4
