better web resource setup for now...

--- a/btca.config.jsonc
+++ b/btca.config.jsonc
@@ -141,6 +141,6 @@
 			"url": "https://btca.dev/"
 		}
 	],
-	"model": "claude-haiku-4-5",
-	"provider": "opencode"
+	"model": "gpt-5.3-codex",
+	"provider": "openai"
 }
