--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -47,6 +47,7 @@
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
+		"@types/turndown": "^5.0.6",
 		"@typescript/native-preview": "^7.0.0-dev.20260109.1",
 		"prettier": "^3.7.4"
 	},
@@ -55,6 +56,7 @@
 		"@ai-sdk/google": "^3.0.13",
 		"@ai-sdk/openai": "^3.0.18",
 		"@ai-sdk/openai-compatible": "^2.0.18",
+		"@btca/bb": "workspace:*",
 		"@btca/shared": "workspace:*",
 		"ai": "^6.0.49",
 		"better-result": "^2.6.0",
@@ -62,6 +64,8 @@
 		"hono": "^4.7.11",
 		"just-bash": "^2.7.0",
 		"opencode-ai": "^1.1.36",
+		"turndown": "^7.2.2",
+		"turndown-plugin-gfm": "^1.0.2",
 		"zod": "^3.25.76"
 	}
 }
