--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     // Environment setup & latest features
     "lib": [
       "ESNext",
+      "DOM",
+      "DOM.Iterable",
     ],
     "jsx": "preserve",
     "jsxImportSource": "@opentui/solid",
