--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,47 +17,48 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.5.1",
-		"@sveltejs/kit": "^2.50.0",
+		"@sveltejs/adapter-node": "^5.5.2",
+		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
-		"@typescript/native-preview": "^7.0.0-dev.20260118.1",
+		"@typescript/native-preview": "^7.0.0-dev.20260211.1",
 		"atmn": "^0.0.30",
-		"prettier": "^3.8.0",
+		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"svelte": "^5.47.0",
-		"svelte-check": "^4.3.5",
+		"svelte": "^5.50.2",
+		"svelte-check": "^4.3.6",
 		"tailwindcss": "^4.1.18",
-		"turbo": "^2.7.5",
+		"turbo": "^2.8.7",
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
-		"@ai-sdk/openai-compatible": "^2.0.13",
+		"@ai-sdk/openai-compatible": "^2.0.29",
 		"@btca/shared": "workspace:*",
-		"btca-sandbox": "workspace:*",
-		"@clerk/backend": "^2.29.5",
-		"@clerk/clerk-js": "^5.120.0",
-		"@clerk/types": "^4.101.11",
+		"@clerk/backend": "^2.30.1",
+		"@clerk/clerk-js": "^5.122.1",
+		"@clerk/types": "^4.101.14",
 		"@convex-dev/migrations": "^0.3.1",
 		"@daytonaio/sdk": "^0.130.0",
 		"@lucide/svelte": "^0.562.0",
-		"@shikijs/langs": "^3.20.0",
-		"@shikijs/themes": "^3.20.0",
+		"@shikijs/langs": "^3.22.0",
+		"@shikijs/themes": "^3.22.0",
 		"@tmcp/adapter-zod": "^0.1.7",
 		"@tmcp/transport-http": "^0.8.4",
-		"ai": "^6.0.42",
-		"autumn-js": "^0.1.69",
-		"convex": "^1.31.5",
+		"ai": "^6.0.81",
+		"autumn-js": "^0.1.75",
+		"better-result": "^2.7.0",
+		"btca-sandbox": "workspace:*",
+		"convex": "^1.31.7",
 		"convex-svelte": "^0.0.12",
-		"isomorphic-dompurify": "^2.35.0",
-		"marked": "^17.0.1",
+		"isomorphic-dompurify": "^2.36.0",
+		"marked": "^17.0.2",
 		"nanoid": "^5.1.6",
-		"posthog-js": "^1.339.1",
-		"posthog-node": "^5.24.9",
-		"shiki": "^3.21.0",
-		"tmcp": "^1.19.0",
-		"zod": "^4.3.5"
+		"posthog-js": "^1.345.5",
+		"posthog-node": "^5.24.15",
+		"shiki": "^3.22.0",
+		"tmcp": "^1.19.2",
+		"zod": "^4.3.6"
 	}
 }
